--- a/SimpleOps/Plantillas/MarcoPdf.cshtml
+++ b/SimpleOps/Plantillas/MarcoPdf.cshtml
@@ -144,12 +144,14 @@
 
     table td { padding: 0px; }
 
-    a { color: @(Model.ModoImpresión ? "#191919" : "#891220"); @(Model.ModoImpresión ? "text-decoration: none;" : "") } /* Usualmente es el mismo fc-s50, pero podría ser cambiado por otro si se desea. */
+    a { @(Model.ModoImpresión ? "text-decoration: none;" : "") }
 
     /* General> */
 
 
     /* <Colores */
+
+    a { color: @(Model.ModoImpresión ? "#191919" : "#891220"); } /* Usualmente es el mismo fc-s50, pero podría ser cambiado por otro si se desea. */
 
     .fc { background-color: @(Model.ModoImpresión ? "#FFFFFF" : "#AB1728"); } /* fc: Fondo de color. */
 
@@ -180,6 +182,10 @@
     .fc-s50 { color: @(Model.ModoImpresión ? "#CDCDCD" : "#891220"); } /* Se obtiene con Paint.Net el fc-s255 sobre el fc con una transparencia de 50. */
 
     .fc-s0, fc-l0 { color: @(Model.ModoImpresión ? "#FFFFFF" : "#AB1728"); } /* Es el mismo color fc pero para aplicarlo a fuentes. Se sigue la misma convención fc-s# para facilitar su recordación. */
+
+    .fc2 { background-color: @(Model.ModoImpresión ? Model.ColorBordes : "#5E0000"); } /* Fondo de color secundario. Normalmente es el mismo que se usa en l-cabeza. */
+
+    .l-cabeza { border-bottom-color: @(Model.ModoImpresión ? Model.ColorBordes : "#5E0000"); }
 
     /* Colores> */
 
@@ -233,8 +239,8 @@
 
     .l-cabeza {
         height: @APuntos(Model.SeparaciónLíneaBajoCabeza - (Model.ModoImpresión ? 3 : 0 )); /* Se le restan 3 de los 10 que se agregan al pie para que las medidas sean iguales en ambos modos. */
-        border-bottom: solid @APuntos(Model.AnchoLíneaBajoCabeza - (Model.ModoImpresión ? 7 : 0 )) /* Se le restan 7 de los 10 que se agregan al pie para que las medidas sean iguales en ambos modos. */
-            @(Model.ModoImpresión ? Model.ColorBordes : "#5E0000");
+        border-bottom-style: solid;
+        border-bottom-width: @APuntos(Model.AnchoLíneaBajoCabeza - (Model.ModoImpresión ? 7 : 0)); /* Se le restan 7 de los 10 que se agregan al pie para que las medidas sean iguales en ambos modos. */
     }
 
     /* Cabeza> */
