--- a/SimpleOps/Plantillas/MarcoPdf.cshtml
+++ b/SimpleOps/Plantillas/MarcoPdf.cshtml
@@ -149,7 +149,7 @@
     /* General> */
 
 
-    /* <Colores */
+    /* <Colores - Este código puede ser copiado y reemplazado por un bloque con los colores personalizados. */
 
     a { color: @(Model.ModoImpresión ? "#191919" : "#891220"); } /* Usualmente es el mismo fc-s50, pero podría ser cambiado por otro si se desea. */
 
