--- a/SimpleOps/Plantillas/ListaProductosPdf.cshtml
+++ b/SimpleOps/Plantillas/ListaProductosPdf.cshtml
@@ -1,4 +1,7 @@
-﻿@inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.IConLíneasProductos>
+﻿@* Plantilla usada por todos los documentos que incluyen una lista de productos con totales como Venta, Factura Proforma, Pedido, etc. *@
+
+
+@inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.IConLíneasProductos>
 
 
 @{
