--- a/SimpleOps/Plantillas/MarcoPdf.cshtml
+++ b/SimpleOps/Plantillas/MarcoPdf.cshtml
@@ -1,4 +1,7 @@
-﻿@inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.DatosDocumento>
+﻿@* Plantilla usada por todos los documentos, incluye los colores y las clases CSS generales usadas por en las otras plantillas. *@
+
+
+@inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.DatosDocumento>
 @using SimpleOps.DocumentosGráficos
 
 
