--- a/SimpleOps/Plantillas/CatálogoPdf.cshtml
+++ b/SimpleOps/Plantillas/CatálogoPdf.cshtml
@@ -23,11 +23,10 @@ Removing or changing the above text is not allowed. *@
 
 
 @inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.DatosCotización>
+@{ #nullable enable }
 
 
-@{
-    ClaveMarco = "Marco";
-}
+@{ ClaveMarco = "Marco"; }
 
 
 <table width="100%">
