--- a/SimpleOps/Plantillas/ListaProductosPdf.cshtml
+++ b/SimpleOps/Plantillas/ListaProductosPdf.cshtml
@@ -26,6 +26,7 @@ Removing or changing the above text is not allowed. *@
 
 
 @inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.IConLíneasProductos>
+@{ #nullable enable }
 
 
 @{
