--- a/SimpleOps/Plantillas/MarcoPdf.cshtml
+++ b/SimpleOps/Plantillas/MarcoPdf.cshtml
@@ -27,6 +27,7 @@
 
 @inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.DatosDocumento>
 @using SimpleOps.DocumentosGráficos
+@{ #nullable enable }
 
 
 @{
