--- a/SimpleOps/Plantillas/CatálogoPdf3.cshtml
+++ b/SimpleOps/Plantillas/CatálogoPdf3.cshtml
@@ -24,6 +24,7 @@ Removing or changing the above text is not allowed. *@
 
 @inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.DatosCotización>
 @using System.Collections.Generic
+@{ #nullable enable }
 
 
 @functions {
