--- a/SimpleOps/Plantillas/VentaPdf.cshtml
+++ b/SimpleOps/Plantillas/VentaPdf.cshtml
@@ -23,6 +23,7 @@ Removing or changing the above text is not allowed. *@
 
 
 @inherits SimpleOps.DocumentosGráficos.PlantillaBase<SimpleOps.DocumentosGráficos.DatosVenta>
+@{ #nullable enable }
 
 
 @{
