--- a/SimpleOps/Plantillas/ListaProductosPdf.cshtml
+++ b/SimpleOps/Plantillas/ListaProductosPdf.cshtml
@@ -127,7 +127,7 @@ Removing or changing the above text is not allowed. *@
 <style>
 
 
-    /* <Generales */
+    @* <Generales *@
 
     .ncolumnas { border-radius: @APuntos(radioFilaNombresColumnas); width: 100%; margin-bottom: @APuntos(margenInferiorNombreColumnas); }
 
@@ -140,7 +140,7 @@ Removing or changing the above text is not allowed. *@
     /* Generales> */
 
 
-    /* <Anchos y Márgenes Columnas */
+    @* <Anchos y Márgenes Columnas *@
 
     .númlín, .númlín-tít { width: @APuntos(anchoNúmeroLínea); }
 
@@ -167,7 +167,7 @@ Removing or changing the above text is not allowed. *@
     /* Anchos y Márgenes Columnas> */
 
 
-    /* <Alineaciones Textos */
+    @* <Alineaciones Textos *@
 
     .desc-tít, .cant-tít, .uni-tít, .cant, .uni, .númlín, .númlín-tít { text-align: center; }
 
