--- a/SimpleOps/Plantillas/CatálogoPdf.cshtml
+++ b/SimpleOps/Plantillas/CatálogoPdf.cshtml
@@ -63,7 +63,7 @@ Removing or changing the above text is not allowed. *@
 <style>
 
 
-    /* <Colores - Este código puede ser copiado y reemplazado por un bloque con los colores personalizados. */
+    @* <Colores - Este código puede ser copiado y reemplazado por un bloque con los colores personalizados. *@
 
     .celda { border-color: #D2D2D2; }
 
@@ -86,7 +86,7 @@ Removing or changing the above text is not allowed. *@
     /* Colores> */
 
 
-    /* <Código Personalizado - Código para elementos propios de cada usuario. */
+    @* <Código Personalizado - Código para elementos propios de cada usuario. *@
 
     /* Código Personalizado> */
 
@@ -269,4 +269,5 @@ Removing or changing the above text is not allowed. *@
     .d4 { /* Una única fila y una única columna. No hay bordes. */
         border-style: none none none none;
     }
+
 </style>
