--- a/SimpleOps/Plantillas/VentaPdf.cshtml
+++ b/SimpleOps/Plantillas/VentaPdf.cshtml
@@ -252,7 +252,7 @@ Removing or changing the above text is not allowed. *@
 <style>
 
 
-    /* <Información Superior */
+    @* <Información Superior *@
 
     .cliente-cn,.oc-cn, .fecha-cn, .venc-cn { position: relative; bottom: 13px; }
 
@@ -295,7 +295,7 @@ Removing or changing the above text is not allowed. *@
     /* Información Superior> */
 
 
-    /* <Información Inferior */
+    @* <Información Inferior *@
 
     .infoinf { margin-bottom: @APuntos(Model.MargenContenidos); page-break-inside: avoid; }
 
